# domgwas

./: README.md
domgwas-0.2.0/: CHANGELOG.md  CITATION.cff  GITHUB_UPLOAD.md  README.md  pyproject.toml  release_check.py  validate_core.py
domgwas-0.2.0/docs/: COVARIATE_SUPPORT.md  EXPECTED_OUTPUTS.md  PREREGISTRATION_AND_REPLICATION_PROTOCOL.md  VALIDATION_DATA.md  VALIDATION_REPORT.md  publication_result_audit.json
domgwas-0.2.0/domgwas/: __init__.py  assoc.py  cli.py  grm.py  io.py  pipeline.py  vc.py
domgwas-0.2.0/examples/: quickstart.py
domgwas-0.2.0/tests/: test_core.py
